<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitleCalculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annapurna_sil"
            android:textColor="@color/black"
            android:text="@string/tituloCalculadora"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>


        <EditText
            android:id="@+id/etKmVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annapurna_sil"
            android:textColor="@color/black"
            android:hint="@string/kmVehiculo"
            android:inputType="numberDecimal"/>


        <EditText
            android:id="@+id/etConsumoElectrico"
            android:layout_width="match_parent"
            android:fontFamily="@font/annapurna_sil"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/consumoelectrico"
            android:inputType="numberDecimal"/>


        <EditText
            android:id="@+id/etConsumoGas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumogas"
            android:fontFamily="@font/annapurna_sil"
            android:textColor="@color/black"
            android:inputType="numberDecimal"/>


        <EditText
            android:id="@+id/etHorasVuelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annapurna_sil"
            android:textColor="@color/black"
            android:hint="Horas de vuelos"
            android:inputType="numberDecimal"/>



        <Button
            android:id="@+id/btnCalcular"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/charis_sil"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:lineSpacingExtra="8sp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/Calculate"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2dp" />


        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total de emisiones: 0 kg CO₂"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="16dp"/>


        <TextView
            android:id="@+id/tvComparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comparación con la media nacional: -"
            android:gravity="center"
            android:paddingTop="8dp"/>


        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar Registro"
            android:visibility="gone"/>


        <Button
            android:id="@+id/btnHistorial"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/charis_sil"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:lineSpacingExtra="8sp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/viewhistory"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2dp" />

    </LinearLayout>
</ScrollView>
