<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imlogoHome"
        android:layout_width="173dp"
        android:layout_height="152dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvappnamehome"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/angkor"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imlogoHome" />

    <TextView
        android:id="@+id/tvintohome"
        android:layout_width="346dp"
        android:layout_height="97dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/baskervville"
        android:lineSpacingExtra="0sp"
        android:text="@string/introduction"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvappnamehome" />

    <Button
        android:id="@+id/btstarthome"
        android:layout_width="230dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/charis_sil"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/startb"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvintohome"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tvregisterhome"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/charis_sil"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btstarthome"
        tools:text="@string/register" />

</androidx.constraintlayout.widget.ConstraintLayout>